# frappe-next-bridge

./: .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
frappe_next_bridge/: api.py  hooks.py  modules.txt
frappe_next_bridge/commands/: __init__.py  boilerplates.py  deploy_nextjs.py  generate_types.py  nextjs_generator.py
frappe_next_bridge/public/css/: login.css
frappe_next_bridge/public/js/: login.js
